--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ subtitle: welcome to eyea blog
 description: "因上努力，因果随缘"
 author: eyea
 language: zh-Hans
-timezone: 
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://eyeseau.com
+url: http://eyea.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -20,16 +20,16 @@ permalink_defaults:
 # Directory
 source_dir: source # 资源文件夹 用来存放内容
 public_dir: public # 公共文件夹，用于存放生成的站点文件
-tag_dir: tags
-archive_dir: archives
-category_dir: categories
+tag_dir: tags   # 标签
+archive_dir: archives    # 归档
+category_dir: categories   # 分类
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
-default_layout: post
+new_post_name: :year-:month-:day-:title.md # File name of new posts
+default_layout: post   # 默认模板(post page photo draft
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
@@ -43,8 +43,8 @@ highlight:
   auto_detect: false
   tab_replace:
 
-# Category & Tag
-default_category: uncategorized
+# Category & Tag   # 分类和标签
+default_category: uncategorized  # 默认分类
 category_map:
 tag_map:
 
@@ -68,7 +68,7 @@ theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy: 
+deploy:
   type: git
   repository: https://github.com/eyeA/eyea.github.io.git
   branch: master
