增加字数统计和建议阅读时长

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: eyeseau
-subtitle: welcome to eyea blog
-description: "因上努力，因果随缘"
+subtitle: Hi, Nice to see you here!
+description: "为了更优雅的生活"
 author: eyea
 language: zh-Hans
 timezone: Asia/Shanghai
